--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </h1>
         </div>
         <div class="question-section">
-          <div class="elem line-1">
+          <div class="elem line-1 left">
             <div class="title">
               <h1>The Best Financial Accounting App Ever!</h1>
             </div>
@@ -201,7 +201,7 @@
               ultricies. In ultrices malesuada elit mauris.
             </p>
           </div>
-          <div class="elem white line-1">
+          <div class="elem white line-1 right">
             <div class="title">
               <h1>The Best Financial Accounting App Ever!</h1>
             </div>
@@ -210,7 +210,7 @@
               ultricies. In ultrices malesuada elit mauris.
             </p>
           </div>
-          <div class="elem white line-2">
+          <div class="elem white line-2 left">
             <div class="title">
               <h1>The Best Financial Accounting App Ever!</h1>
             </div>
@@ -219,7 +219,7 @@
               ultricies. In ultrices malesuada elit mauris.
             </p>
           </div>
-          <div class="elem line-2">
+          <div class="elem line-2 right">
             <div class="title">
               <h1>The Best Financial Accounting App Ever!</h1>
             </div>
@@ -228,7 +228,7 @@
               ultricies. In ultrices malesuada elit mauris.
             </p>
           </div>
-          <div class="elem">
+          <div class="elem left line-1 .left">
             <div class="title">
               <h1>The Best Financial Accounting App Ever!</h1>
             </div>
@@ -237,7 +237,7 @@
               ultricies. In ultrices malesuada elit mauris.
             </p>
           </div>
-          <div class="elem white">
+          <div class="elem white right">
             <div class="title">
               <h1>The Best Financial Accounting App Ever!</h1>
             </div>
@@ -333,6 +333,18 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+      integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
