--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="heading-section">
           <h3>F A Q</h3>
           <h1>
-            Frequently Asked <br />
+            Frequently Asked hh<br />
             Questions
           </h1>
         </div>
